--- a/app/src/radioZamaneh/AndroidManifest.xml
+++ b/app/src/radioZamaneh/AndroidManifest.xml
@@ -4,7 +4,7 @@
     package="info.guardianproject.securereaderinterface">
     <application
         tools:replace="android:icon"
-        android:icon="@drawable/rz_logo"
+        android:icon="@drawable/ic_launcher"
         android:name="info.guardianproject.securereaderinterface.App"
         android:label="@string/app_name"
         android:description="@string/app_description"
