--- a/app/build.gradle
+++ b/app/build.gradle
@@ -96,6 +96,7 @@ dependencies {
     compile 'com.squareup.okhttp:okhttp:2.3.0'
     compile 'com.google.code.gson:gson:2.4'
     compile 'net.hockeyapp.android:HockeySDK:3.7.1'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
 
 apply from: 'preprocess.gradle'
