--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,4 @@
 include ':app'
 include ':external:NetCipher:libnetcipher'
+include ':external:IOCipher-v0.4'
 include ':external:securereaderlibrary'
